manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: game-service
  namespace: 2048-game
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: game-pod
